--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "expo": "~53.0.9",
     "expo-status-bar": "~2.2.3",
     "nativewind": "^4.1.23",
